--- a/ExtraBlog/ExtraBlog.csproj
+++ b/ExtraBlog/ExtraBlog.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.10" />
+    <PackageReference Include="Neo4jClient" Version="4.1.1" />
   </ItemGroup>
 
   <ItemGroup>
