--- a/ExtraBlog/appsettings.json
+++ b/ExtraBlog/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Neo4JDB": "http://localhost:7474/"
+  },
+  "Neo4JTestSettingsL": {
+    "Username": "neo4j",
+    "Pass": "neo4"
+  }
 }
