--- a/ExtraBlog/appsettings.json
+++ b/ExtraBlog/appsettings.json
@@ -1,17 +1,13 @@
 {
+  "AppSettings": {
+    "Secret": ")@!(U)@!UD)(*JQD(J9qw0qwue98quwe8q W9aisdjioiUJHUHu89hq0we89hqaiosdhujghn"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Neo4JDB": "http://localhost:7474/"
+    }
   },
-  "Neo4JTestSettingsL": {
-    "Username": "neo4j",
-    "Pass": "neo4"
-  }
+  "AllowedHosts": "*"
 }
